# MLM26_EfficientCoder

./: .gitignore  DATA.md  FAQ.md  MODELS.md  README.md  RESOURCES.md  RULES.md  WRITEUP_TEMPLATE.md  kaggle_page_draft.md
data/: README.md
docs/: collections.md  maintainers.md  transcription_conventions.md
evaluation/: README.md  example_predictions.csv  example_solution.csv  metric.py  score_local.py
kaggle/: DATA_TAB.md  mlm26_metric.py  sample_submission.csv  solution.csv
notebooks/: 01_traditional_pipeline.ipynb  02_open_source_tools.ipynb  03_vlm_transcription.ipynb  README.md
outreach/: 2026-05-deadline-reminder.md
starter/: .env.example  .gitignore  README.md  pyproject.toml
starter/agent/: agent.py  llm.py  prompts.py  tools.py
starter/docs/: byo_model.md  docker_setup.md  harbor.md  safety.md  troubleshooting.md  uw_madison_endpoint.md  walkthrough.md
starter/eval/: public_subset.txt
starter/scripts/: check_vram_table.py  estimate_vram.py  run_baseline.sh  run_subset.sh
